--- a/api_gateway_dependencies/requirements.txt
+++ b/api_gateway_dependencies/requirements.txt
@@ -1,15 +1,22 @@
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+colorama==0.4.6
 cryptography==41.0.5
 Deprecated==1.2.14
 idna==3.4
+jmespath==1.0.1
+pluggy==1.3.0
+psutil==5.9.6
 pycparser==2.21
 PyGithub==2.1.1
 PyJWT==2.8.0
 PyNaCl==1.5.0
 python-dateutil==2.8.2
+PyYAML==6.0.1
 requests==2.31.0
+s3transfer==0.7.0
 six==1.16.0
 typing_extensions==4.8.0
+urllib3==2.0.7
 wrapt==1.16.0
